# DigitalMenuForWppAPI

./: .gitignore  LICENSE  pyproject.toml
client/: .gitignore  angular.json  package-lock.json  package.json
client/src/: index.html  styles.css  styles.css.map  styles.scss  variables.scss
client/src/app/: app.component.css  app.component.css.map  app.component.scss  app.component.ts  app.config.ts  product.service.ts
client/src/app/components/logo/: logo.component.css  logo.component.css.map  logo.component.html  logo.component.scss
client/src/app/components/menu-type/: menu-type.component.css  menu-type.component.css.map  menu-type.component.html  menu-type.component.scss  menu-type.component.ts
client/src/app/components/product-card/: product-card.component.css  product-card.component.css.map  product-card.component.html  product-card.component.scss  product-card.component.ts
client/src/app/components/searchbar/: searchbar.component.css  searchbar.component.css.map  searchbar.component.html  searchbar.component.scss  searchbar.component.ts
client/src/app/interfaces/: cart.ts
client/src/app/pipes/: number-format.pipe.ts
client/src/app/services/: cart-effect.service.ts  cart.service.ts  menu-type.service.ts  product.service.ts  scroll.service.ts  type.service.ts
client/src/app/store/: app.state.ts
server/: Makefile  pytest.ini
server/menu/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
server/menu/migrations/: 0001_initial.py  0002_photo_image.py
server/server/: settings.py  urls.py
(+15 files in other folders)
